# Proyecto_Api_Web

./: README.md  pyproject.toml  requirements.txt
app/: database.py  errors.py  main.py  security.py  services.py
app/models/: cliente.py  detalle_venta.py  historial_inventario.py  producto.py  usuario.py  venta.py
app/routers/: clientes.py  detalles_venta.py  historial_inventario.py  productos.py  usuarios.py  ventas.py
scripts/: retry_upload_complete.py
supabase/migrations/: 20260716000100_sales_inventory_schema.sql
tests/: test_app.py
