[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto-api-web"
version = "0.1.0"
description = "API para gestión de ventas e inventario"
requires-python = "==3.13.*"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["supabase*"]

[tool.fastapi]
entrypoint = "app.main:app"