[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto-api-web"
version = "0.1.0"
description = "API para gestión de ventas e inventario"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]",
    "supabase",
    "python-dotenv"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["supabase*"]

[tool.fastapi]
entrypoint = "main:app"
